# threatwatch-agent

./: .gitignore  README.md  project.toml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/threatwatch/: auth_log_analyzer.py  cli.py  log_collector.py
src/threatwatch.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/threatwatch/detectors/: failed_logins.py
tests/: test_smoke.py
tests/integration/: test_cli_json_output.py
tests/unit/: test_parser_smoke.py
