[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "threatwatch"
version = "1.1.0"
description = "Simple local threat scanner for Linux auth logs"
requires-python = ">=3.10"

[project.scripts]
threatwatch = "threatwatch.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
